--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <h4>Welcome to Docker Container - Deployed using Jenkins Pipeline !!!!!</h4>
       <br>
-       <h4>Learning containers is really fun and awesome!!!!!</h4>
+       <h4>Learning containers is really fun and awesome & Azure !!!!!</h4>
     </div>
   </body>
 </html>
