--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,9 @@
   </head>
   <body>
     <div class="container">
-      <h4>Welcome to Docker Container - Deployed using Jenkins Pipeline !!!!!</h4>
+      <h4>Welcome to Trackonomy - Hope Everything Good..!!!!!</h4>
       <br>
-       <h4>Learning containers is really fun and awesome & Azure !!!!!</h4>
+       <h4>Learning containers is really fun and awesome !!!!!</h4>
        <br>
        <h4>Thank You !!!!!</h4>
     </div>
